Updated SwaggerUI
